Add the issues about E5-and-dragons.